--- a/co2_native_client/android/app/src/main/AndroidManifest.xml
+++ b/co2_native_client/android/app/src/main/AndroidManifest.xml
@@ -39,8 +39,9 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="com.ariccio.co2_native_client"/>
         <data android:scheme="exp+co2nativeclient"/>
+        <data android:scheme="com.ariccio.co2_native_client"/>
+        <data android:scheme="com.ariccio.co2_native_client:/oauthredirect"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
