--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -30,6 +30,7 @@
     "react-devtools-core": "4.23.0",
     "react-dom": "17.0.2",
     "react-native": "0.64.3",
+    "react-native-alert-async": "^1.0.5",
     "react-native-ble-plx": "^2.0.3",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-web": "0.17.7",
