--- a/co2_native_client/android/app/src/main/AndroidManifest.xml
+++ b/co2_native_client/android/app/src/main/AndroidManifest.xml
@@ -39,7 +39,9 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="exp+co2nativeclient"/>
+        <!-- ?????? which one? Why is this tormenting me such? -->
         <data android:scheme="riccio.co2.client"/>
+        <data android:scheme="com.ariccio.co2_native_client"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
