--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -11,9 +11,8 @@
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^0.0.2",
     "@notifee/react-native": "^4.1.0",
-    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
-    "@react-navigation/native-stack": "^6.5.2",
     "@reduxjs/toolkit": "^1.7.1",
     "@sentry/react-native": "^3.3.2",
     "big-integer": "^1.6.51",
@@ -35,8 +34,10 @@
     "react-native": "0.64.3",
     "react-native-alert-async": "^1.0.5",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
     "sentry-expo": "^4.0.0"
