--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -23,6 +23,7 @@
     "@types/web-bluetooth": "^0.0.12",
     "bootstrap": "^5.1.3",
     "bowser": "^2.11.0",
+    "eslint-plugin-react-perf": "^3.3.1",
     "i18next": "^21.6.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
@@ -63,7 +64,6 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react-perf": "^3.3.1"
+    "eslint-plugin-jsx-a11y": "^6.5.1"
   }
 }
