--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -23,6 +23,7 @@
     "expo-constants": "~13.0.1",
     "expo-dev-client": "~0.8.0",
     "expo-device": "~4.1.0",
+    "expo-intent-launcher": "~10.1.3",
     "expo-random": "~12.1.1",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
