--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "co_native_client",
+  "name": "co2_native_client",
   "version": "1.0.17",
   "scripts": {
     "start": "expo start --dev-client",
