--- a/co2_native_client/android/build.gradle
+++ b/co2_native_client/android/build.gradle
@@ -1,7 +1,6 @@
-// https://stackoverflow.com/a/29983737/625687
-import org.gradle.logging.ShowStacktrace
-gradle.startParameter.showStacktrace = ShowStacktrace.ALWAYS
-throw new RuntimeException('lol')
+// https://stackoverflow.com/questions/29977196/how-can-i-make-gradle-stacktrace-the-default#comment63547830_29983737
+gradle.startParameter.showStacktrace = org.gradle.api.logging.configuration.ShowStacktrace.ALWAYS_FULL
+
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
