--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -5,18 +5,18 @@
   "dependencies": {
     "@react-google-maps/api": "^2.7.0",
     "@reduxjs/toolkit": "^1.6.2",
-    "@sentry/react": "^6.15.0",
-    "@sentry/tracing": "^6.15.0",
+    "@sentry/react": "^7.1.1",
+    "@sentry/tracing": "^7.1.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/google.maps": "^3.47.3",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
-    "@types/react": "^17.0.43",
+    "@types/react": "^18.0.12",
     "@types/react-bootstrap": "^0.32.28",
     "@types/react-datepicker": "^4.3.2",
-    "@types/react-dom": "^17.0.11",
+    "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.3.2",
@@ -33,10 +33,10 @@
     "react-dom": "^18.0.0",
     "react-google-login": "^5.2.2",
     "react-i18next": "^11.15.0",
-    "react-redux": "8.0.0-beta.3",
+    "react-redux": "8.0.2",
     "react-router-bootstrap": "0.26.1",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "5.0.1",
     "typescript": "~4.5.2",
     "web-vitals": "^2.1.2"
   },
