--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.17.12",
     "@react-google-maps/api": "^2.7.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@sentry/react": "^7.1.1",
@@ -25,6 +26,7 @@
     "@typescript-eslint/parser": "^5.28.0",
     "bootstrap": "^5.1.3",
     "bowser": "^2.11.0",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-perf": "^3.3.1",
     "i18next": "^21.6.0",
     "i18next-browser-languagedetector": "^6.1.2",
