--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.1.3",
     "bowser": "^2.11.0",
     "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-perf": "^3.3.1",
     "i18next": "^21.6.0",
     "i18next-browser-languagedetector": "^6.1.2",
