--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -66,7 +66,8 @@
     "prettier": "^2.5.1",
     "standard-version": "^9.3.2",
     "standard-version-expo": "^1.0.3",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "metro-react-native-babel-preset": "~0.67.0"
   },
   "private": true,
   "resolutions": {
