--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -17,39 +17,39 @@
     "@sentry/react-native": "^3.3.2",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
-    "expo": "~44.0.0",
-    "expo-application": "~4.0.1",
-    "expo-auth-session": "~3.5.0",
-    "expo-constants": "~13.0.1",
-    "expo-dev-client": "~0.8.0",
-    "expo-device": "~4.1.0",
-    "expo-intent-launcher": "~10.1.3",
-    "expo-random": "~12.1.1",
-    "expo-secure-store": "~11.1.0",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "^0.11.6",
-    "react": "17.0.1",
+    "expo": "^45.0.0",
+    "expo-application": "~4.1.0",
+    "expo-auth-session": "~3.6.1",
+    "expo-constants": "~13.1.1",
+    "expo-dev-client": "~1.0.0",
+    "expo-device": "~4.2.0",
+    "expo-intent-launcher": "~10.2.0",
+    "expo-random": "~12.2.0",
+    "expo-secure-store": "~11.2.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
+    "react": "17.0.2",
     "react-devtools-core": "4.23.0",
     "react-dom": "17.0.2",
-    "react-native": "0.64.3",
+    "react-native": "0.68.2",
     "react-native-alert-async": "^1.0.5",
     "react-native-ble-plx": "^2.0.3",
     "react-native-create-bridge": "^2.0.1",
-    "react-native-pager-view": "5.4.9",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-pager-view": "5.4.15",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
-    "sentry-expo": "^4.0.0"
+    "sentry-expo": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-typescript": "^7.16.7",
     "@eslint/create-config": "^0.1.2",
-    "@types/react": "~17.0.40",
-    "@types/react-native": "~0.64.12",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.11.0",
@@ -67,7 +67,7 @@
     "prettier": "^2.5.1",
     "standard-version": "^9.3.2",
     "standard-version-expo": "^1.0.3",
-    "typescript": "~4.6.2"
+    "typescript": "~4.3.5"
   },
   "private": true,
   "resolutions": {
