--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -32,13 +32,13 @@
     "react": "17.0.2",
     "react-devtools-core": "4.23.0",
     "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react-native": "^0.68.0",
     "react-native-alert-async": "^1.0.5",
     "react-native-ble-plx": "^2.0.3",
     "react-native-create-bridge": "^2.0.1",
     "react-native-pager-view": "5.4.15",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.13.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
@@ -64,7 +64,7 @@
     "eslint-plugin-react-native-globals": "^0.1.2",
     "eslint-plugin-react-perf": "^3.3.1",
     "jshint": "2.13.4",
-    "metro-react-native-babel-preset": "~0.67.0",
+    "metro-react-native-babel-preset": "^0.67.0",
     "prettier": "^2.5.1",
     "standard-version": "^9.3.2",
     "standard-version-expo": "^1.0.3",
