--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -9,4 +9,5 @@ jobs:
       - uses: ruby/setup-ruby@v1
         # with:
           # bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - run: bundle exec rake      
+      - name: check validates_timeliness new version
+        uses: ariccio/check_validates_timeliness@should-work-now-lol
