--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          repository: 'ariccio/check_validates_timeliness'
+          # ref: 'v3.0.0'
       - uses: ruby/setup-ruby@v1
         # with:
           # bundler-cache: true # runs 'bundle install' and caches installed gems automatically
