--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: check validates_timeliness new version
-        uses: ariccio/check_validates_timeliness@add-outputs
+        uses: ariccio/check_validates_timeliness@deliberate-broken-actual
         id: check-version-diff
       - name: do something if diff
         if: ${{steps.check-version-diff.outputs}}
