--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -18,5 +18,5 @@ jobs:
         uses: ariccio/check_validates_timeliness@deliberate-broken-actual
         id: check-version-diff
       - name: do something if diff
-        if: ${{steps.check-version-diff.outputs}}
-        run: echo ${{steps.check-version-diff.outputs.maybe-new-version}}
+        if: ${{ steps.check-version-diff.outputs }}
+        run: echo "${{ steps.check-version-diff.outputs.maybe-new-version }}"
