--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -19,4 +19,4 @@ jobs:
         id: check-version-diff
       - name: do something if diff
         if: ${{ steps.check-version-diff.outputs.maybe-new-version }}
-        run: echo "${{ toJSON(steps.check-version-diff.outputs.maybe-new-version) }}";echo "${{toJSON(steps)}}";echo "${{toJSON(jobs)}}"
+        run: echo "${{ toJSON(steps.check-version-diff.outputs.maybe-new-version) }}";echo "${{toJSON(steps)}}"
